3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

This commit adds support for the map2 protocol command (10 layer map).
This changes how the data is stored and sent to the client.  This also
implements the idea of client handling map animations, so adds some object
flags so that the server knows if it should let the client handle animations
or not.  Support for the original map protocol command is removed.
---
aclocal.m4: rebuilt
configure.ac: Add checks for zlib.h, libz - not used right now, but will
   probably be used in the future, so no reason to remove it.
common/loader.l: Add client_anim_sync, client_anim_random FLAGS.
common/map.c: Add add_face_layer() to set face for a layer.   Redo/simplify
   update_position to store faces away based on layering criteria.
common/time.c: Replace long pticks with a uint32, since size of a long will
   vary, and we now send pticks to the client as a 32 bit value.
crossedit/CrEdit.c: Update the draw logic based on the fact there are more
   layers now.
crossedit/Edit.c: Comment out some code that probably should be fixed.
   Replace calls of SET_MAP_FACE with SET_MAP_FACE_OBJ
doc/Developers/protocol: Updated with map2, tick protocol additions.
   Reorganize the parameters in the setup protocol command so they are now
   listed in alphabetical order.
include/autoconf.h.in: Add HAVE_ZLIB_H define.
include/define.h: Update for the FLAG_CLIENT_ANIM values.
include/face.h: Remove MapLook structure - no longer used.
include/global.h: change extern type for pticks from long to uint32
include/map.h: Change MAP_LAYERS to 10.  Add definitions for what each
   map layer is.  Remove GET/SET_MAP_FACE macro - no longer used,